ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi-ingress
  annotations:
    # Для Cert-Manager для получения SSL-сертификата
    cert-manager.io/cluster-issuer: "letsencrypt-prod" 
    # Traefik должен обрабатывать конфиг
    kubernetes.io/ingress.class: "traefik"
    # Автоматический переброс пользователя с http на https
    ingress.kubernetes.io/ssl-redirect: "true"   
    # Traefik использует стандартный порт 443
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  tls:
  - hosts:
    - api.witdevel.ru
    secretName: fastapi-tls-cert
  rules:
  - host: api.witdevel.ru # домен - весь трафик направлять сюда
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fastapi-service
            port:
              number: 80
